--- a/styles/this_stylesheet.css
+++ b/styles/this_stylesheet.css
@@ -6,7 +6,7 @@
         }
     }
 
-    
+
 /* FORM CONTAINER */
 .settings-container {
     display: flex;
@@ -29,7 +29,6 @@
 .setting-row label {
     flex: 1; /* Take available space */
     text-align: left;
-    /*font-size: 16px;*/
 }
 
 /* INPUTS */
@@ -37,14 +36,17 @@
 .setting-row select {
     flex: 1;
     padding: 5px;
-    /*font-size: 16px;*/
 }
 
 .setting-row input {
-    width: 45px;  /* Shorter input fields */
-    /*max-width: 45px;*/
+    /*width: 45px;*/  /* Shorter input fields */
+    max-width: 45px;
     padding: 3px;
     text-align: center;
+}
+
+.axis {
+    /*max-width: 45px;*/
 }
 
 /* ERROR BOX */
